BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_CaseTemplate__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDescription__c</fullName>
        <description>Description of current Activity</description>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActivityInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Note</fullName>
                </value>
                <value>
                    <fullName>Customer Note</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Escalation by Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Escalation Response</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>Outbound Email</fullName>
                </value>
                <value>
                    <fullName>Case Creation</fullName>
                </value>
                <value>
                    <fullName>ARRIVAL</fullName>
                </value>
                <value>
                    <fullName>STOP</fullName>
                </value>
                <value>
                    <fullName>ETA</fullName>
                </value>
                <value>
                    <fullName>CLOSURE</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetServiceStatus__c</fullName>
        <description>Asset Status returned from NMP</description>
        <label>Asset Service Status?</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRNewValue__c</fullName>
        <description>Configuration Change Request New Value. This can include any value such as IP Address</description>
        <label>CCR New Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCROldValue__c</fullName>
        <label>CCR Old Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedOutageHours__c</fullName>
        <label>Calculated Outage Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Case should be synced to Customer Portal</description>
        <label>Case Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Case_Record_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Phone - inbound</fullName>
                </value>
                <value>
                    <fullName>Phone - outbound</fullName>
                </value>
                <value>
                    <fullName>Self-care</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>EM7</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>MobileAPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
   <fields>
        <fullName>CaseTotalOpenTime__c</fullName>
        <description>Duration of how long the case has been open in Days, Hours and Minutes. Open is when Case status is not Closed</description>
        <label>Case Total Open Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Templates</relationshipLabel>
        <relationshipName>Case_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentQueue__c</fullName>
        <description>Stamps the queue from which the user picked up the Case</description>
        <label>Current Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTicketNumber__c</fullName>
        <label>Customer Ticket Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurationHours__c</fullName>
        <label>Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FollowUpDueDate__c</fullName>
        <inlineHelpText>Please enter minutes to be added on follow up due date</inlineHelpText>
        <label>Minutes until Follow up Due</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HNSAssetID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hughes Asset ID of the Impacted Asset associated to the Case</description>
        <label>HNS Asset ID</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Case Templates</relationshipLabel>
        <relationshipName>Case_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSVC_Resolution_Code_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Code Rule</label>
        <referenceTo>HSvc_ResolutionCodeRule__c</referenceTo>
        <relationshipLabel>Case Templates</relationshipLabel>
        <relationshipName>Case_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Actual_Issue__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activate service</fullName>
                </value>
                <value>
                    <fullName>Adjustments not applied</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contact customer</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Customer Education</fullName>
                </value>
                <value>
                    <fullName>Customer Issue</fullName>
                </value>
                <value>
                    <fullName>De-install Equipment</fullName>
                </value>
                <value>
                    <fullName>Dispatch Tech</fullName>
                </value>
                <value>
                    <fullName>Educated Customer</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Escalated to Hughes</fullName>
                </value>
                <value>
                    <fullName>Escalated to SIC</fullName>
                </value>
                <value>
                    <fullName>Escalated to Supervisor</fullName>
                </value>
                <value>
                    <fullName>Give Courtesy Token(s)</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Inform management Customer Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Inform management Field Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Install - Escalate</fullName>
                </value>
                <value>
                    <fullName>Install - Updated</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Not located</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( ExpiryDate__c  &lt;  TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Issue__c</fullName>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Customer_Request_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Account Issue</fullName>
                </value>
                <value>
                    <fullName>Account Name (Misspelling)</fullName>
                </value>
                <value>
                    <fullName>Account Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Activate new service</fullName>
                </value>
                <value>
                    <fullName>Agent Callback</fullName>
                </value>
                <value>
                    <fullName>Amount Due</fullName>
                </value>
                <value>
                    <fullName>API - FAP Token</fullName>
                </value>
                <value>
                    <fullName>API - Order</fullName>
                </value>
                <value>
                    <fullName>Application access issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - hughes</fullName>
                </value>
                <value>
                    <fullName>Application Questions</fullName>
                </value>
                <value>
                    <fullName>Application Slow response times</fullName>
                </value>
                <value>
                    <fullName>Application System Error</fullName>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Automated Call - Activation</fullName>
                </value>
                <value>
                    <fullName>Available schedule</fullName>
                </value>
                <value>
                    <fullName>Bad Cables/Wiring</fullName>
                </value>
                <value>
                    <fullName>Bad Modem</fullName>
                </value>
                <value>
                    <fullName>Bad Radio</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - CSR</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - Technical</fullName>
                </value>
                <value>
                    <fullName>Bad website</fullName>
                </value>
                <value>
                    <fullName>Bad website/url</fullName>
                </value>
                <value>
                    <fullName>Bank Strike</fullName>
                </value>
                <value>
                    <fullName>Bill Date</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Available_to_Profile__c</fullName>
        <label>Available to Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Customer Portal Defaults</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Case_Re_assign__c</fullName>
        <label>Case Re-assign</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Hsvc_Support_Tier__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TP Monterrey Universal</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey MOD</fullName>
                </value>
                <value>
                    <fullName>South America Control Center</fullName>
                </value>
                <value>
                    <fullName>General Ops</fullName>
                </value>
                <value>
                    <fullName>MOD</fullName>
                </value>
                <value>
                    <fullName>SP IT/Systems Admin</fullName>
                </value>
                <value>
                    <fullName>SP Technical Support Tier 1</fullName>
                </value>                
                <value>
                    <fullName>Hughes Distributor</fullName>
                </value>
                <value>
                    <fullName>SDG</fullName>
                </value>
                <value>
                    <fullName>Hughes de Colombia</fullName>
                </value>
                <value>
                    <fullName>Hughes de Panama</fullName>
                </value>
                <value>
                    <fullName>Hughes de Peru</fullName>
                </value>
                <value>
                    <fullName>Hughes de Ecuador</fullName>
                </value>
                <value>
                    <fullName>Hughes de Chile</fullName>
                </value>
                <value>
                    <fullName>Hughes de Corporate (HQ)</fullName>
                </value>
				<value>
                    <fullName>Ent SA Frontline</fullName>
                </value>
                <value>
                    <fullName>Ent SA Field Support</fullName>
                </value>
                <value>
                    <fullName>Ent SA Control Desk</fullName>
                </value>
                <value>
                    <fullName>Ent SA Business Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Case_Record_type__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
                <value>
                    <fullName>Business Support Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
   <fields>
        <fullName>HSvc_Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Case_Record_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open - Dispatch</fullName>
                </value>
                <value>
                    <fullName>Open - Escalated</fullName>
                </value>
                <value>
                    <fullName>Open - Holding for Parts</fullName>
                </value>
                <value>
                    <fullName>Open PSR</fullName>
                </value>
                <value>
                    <fullName>Pending - Callback</fullName>
                </value>
                <value>
                    <fullName>Pending - Customer Input</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Open - Upgrade</fullName>
                </value>
                <value>
                    <fullName>Pending - Engineering Action</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending - Site Access</fullName>
                </value>
                <value>
                    <fullName>Pending - Vendor Meet</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Open - In Progress</fullName>
                </value>
                <value>
                    <fullName>Open - On Site</fullName>
                </value>
                <value>
                    <fullName>Pending - Cancel</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Open - PAM Case</fullName>
                </value>
                <value>
                    <fullName>Open - Provisioning Processing</fullName>
                </value>
                <value>
                    <fullName>Open - Web Case</fullName>
                </value>
                <value>
                    <fullName>Pending - Construction</fullName>
                </value>
                <value>
                    <fullName>Pending - Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Pending - Install</fullName>
                </value>
                <value>
                    <fullName>Pending - Monitoring</fullName>
                </value>
                <value>
                    <fullName>Pending - NAP</fullName>
                </value>
                <value>
                    <fullName>Pending Post Install Provisioning</fullName>
                </value>
                <value>
                    <fullName>Pending - Provisioning Group</fullName>
                </value>
                <value>
                    <fullName>Pending - Service Provider Closure</fullName>
                </value>
                <value>
                    <fullName>Pending - Weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields> 
    <fields>
        <fullName>HSvc_Case_Subject__c</fullName>
        <label>Case Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Type_Sub_Type__c</fullName>
        <formula>IF(TEXT( HSvc_Case_Type__c  )&lt;&gt;&apos;&apos; &amp;&amp; TEXT( Hsvc_Case_Subtype__c  )&lt;&gt;&apos;&apos;,TEXT( HSvc_Case_Type__c  ) &amp; &apos; / &apos; &amp; TEXT( Hsvc_Case_Subtype__c  ),IF(TEXT( HSvc_Case_Type__c  )=&apos;&apos; &amp;&amp; TEXT( Hsvc_Case_Subtype__c  )=&apos;&apos;,&apos;&apos;,IF(TEXT( HSvc_Case_Type__c  )&lt;&gt;&apos;&apos;,TEXT( HSvc_Case_Type__c  ),TEXT( Hsvc_Case_Subtype__c  ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type &amp; Sub-Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Case_Record_type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Support</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>Pre-install</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Repair Field</fullName>
                </value>
                <value>
                    <fullName>Repair Remote</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Techician Support</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ChildCaseQuickCaseCreateTempla__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Case Quick Case Create Template</label>
        <referenceTo>HSvc_CaseTemplate__c</referenceTo>
        <relationshipLabel>Case Templates (Child Case Quick Case Create Template)</relationshipLabel>
        <relationshipName>ChildCaseTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Count_towards_Contractual_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Count towards Contractual SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Create_Child_Case_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Child Case(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Request_Type__c</fullName>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_SuspectedAsset__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acquisition Information</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Billing/Invoicing</fullName>
                </value>
                <value>
                    <fullName>Billing Info</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Recording</fullName>
                </value>
                <value>
                    <fullName>Cancel - Change of Address</fullName>
                </value>
                <value>
                    <fullName>Cancel - Competition</fullName>
                </value>
                <value>
                    <fullName>Cancel - Financial</fullName>
                </value>
                <value>
                    <fullName>Cancellation Information</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel - Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Cancel - Sales Practices</fullName>
                </value>
                <value>
                    <fullName>Cancel Service</fullName>
                </value>
                <value>
                    <fullName>Cancel - Technical</fullName>
                </value>
                <value>
                    <fullName>Cancel - Treatment</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Connect to Wi-Fi Booster</fullName>
                </value>
                <value>
                    <fullName>Cannot find Wi-Fi Network</fullName>
                </value>
                <value>
                    <fullName>Cannot Login</fullName>
                </value>
                <value>
                    <fullName>Cannot Receive Emails</fullName>
                </value>
                <value>
                    <fullName>Cannot Send Emails</fullName>
                </value>
                <value>
                    <fullName>Care Operations</fullName>
                </value>
                <value>
                    <fullName>Change Due Date - Temporary</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Change Payment Type</fullName>
                </value>
                <value>
                    <fullName>Change Service Plan</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Collect Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Entitlement.Account.Name</field>
                <operation>startsWith</operation>
                <value>Hughes</value>
            </filterItems>
            <filterItems>
                <field>Entitlement.Account.Name</field>
                <operation>startsWith</operation>
                <value>HUGHES</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Case Templates</relationshipLabel>
        <relationshipName>Case_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Exclude_Asset_from_future_chronic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Asset from future chronic cal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Pre_populate_Case_field_values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-populate Case field values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_RIA__c</fullName>
        <formula>IF(((TEXT( HSvc_Customer_Request_Type__c )) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Action__c )) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Actual_Issue__c )) &lt;&gt; &apos;&apos;),
TEXT( HSvc_Customer_Request_Type__c ) &amp; &apos;/&apos; &amp; TEXT( HSvc_Action__c ) &amp; &apos;/&apos; &amp; TEXT( HSvc_Actual_Issue__c ),
IF(((TEXT( HSvc_Customer_Request_Type__c )) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Action__c )) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Actual_Issue__c )) == &apos;&apos;),
TEXT( HSvc_Customer_Request_Type__c ) &amp; &apos;/&apos; &amp; TEXT( HSvc_Action__c ),
IF(((TEXT( HSvc_Customer_Request_Type__c )) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Action__c )) == &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Actual_Issue__c )) &lt;&gt; &apos;&apos;),
TEXT( HSvc_Customer_Request_Type__c ) &amp; &apos;/&apos; &amp; TEXT( HSvc_Actual_Issue__c ),
IF(((TEXT( HSvc_Customer_Request_Type__c )) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Action__c )) == &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Actual_Issue__c )) == &apos;&apos;),
TEXT( HSvc_Customer_Request_Type__c ),
IF(((TEXT( HSvc_Customer_Request_Type__c )) == &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Action__c )) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Actual_Issue__c )) &lt;&gt; &apos;&apos;),
TEXT( HSvc_Action__c ) &amp; &apos;/&apos; &amp; TEXT( HSvc_Actual_Issue__c ),
IF(((TEXT( HSvc_Customer_Request_Type__c )) == &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Action__c )) == &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Actual_Issue__c )) &lt;&gt; &apos;&apos;),
TEXT( HSvc_Actual_Issue__c ),
IF(((TEXT( HSvc_Customer_Request_Type__c )) == &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Action__c )) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT( HSvc_Actual_Issue__c )) == &apos;&apos;),
TEXT( HSvc_Action__c ),&apos;&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Reason_Description__c</fullName>
        <description>Reason description from RIA Reason mapping</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>